[project]
name = "mkdocs-literate-nav"
description = "MkDocs plugin to specify the navigation in Markdown instead of YAML"
authors = [
    {name = "Oleh Prypin", email = "oleh@pryp.in"},
]
license = {text = "MIT"}
urls = {repository = "https://github.com/oprypin/mkdocs-literate-nav"}
keywords = ["mkdocs", "mkdocs-plugin"]
readme = "README.md"
dynamic = ["version"]

requires-python = ">=3.6"
dependencies = [
    "mkdocs >=1.0.3, <2.0",
    "dataclasses >=0.7; python_version<'3.7'",
]

[project.entry-points."mkdocs.plugins"]
literate-nav = "mkdocs_literate_nav.plugin:LiterateNavPlugin"

[tool.pdm]
version = {use_scm = true}

[tool.pdm.dev-dependencies]
test = [
    "pytest >=6.1.2, <8.0",
    "pytest-golden >=0.2",
]
lint = [
    "black",
    "isort",
    "autoflake",
    "pytype; python_version>='3.6' and python_version<'3.10' and sys_platform!='win32'",
]
docs = [
    "mkdocs >=1.1.2",
    "mkdocs-material >=7.1.4",
    "pymdown-extensions >=8.2",
    "markdown-callouts >=0.1",
]

[tool.black]
line-length = 100

[tool.isort]
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
addopts = "--tb=native"
enable_assertion_pass_hook = true
filterwarnings = ["ignore::DeprecationWarning:.*:",
                  "default::DeprecationWarning:mkdocs_literate_nav.*:"]
testpaths = ["tests"]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
